# reado

./: .gitignore  .impeccable.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Taskfile.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
branding/: render-icon.sh
crates/reado-cli/: Cargo.toml
crates/reado-cli/src/: main.rs  mcp.rs
crates/reado-core/: Cargo.toml
crates/reado-core/src/: lib.rs  session.rs
docs/: RELEASING.md
docs/research/: color-theory-for-reading.md
docs/testing/: BUG-LEDGER.md
docs/testing/testbook/: 01-launcher.md  02-file-tree.md  03-editor-tabs.md  04-search.md  05-comments.md  06-git.md  07-guided-review.md  08-terminal.md  09-lsp.md  10-palette.md  11-settings.md  12-anywhere.md  13-forge.md  14-modals-chrome.md  README.md  X1-visual-matrix.md  X10-lifecycle.md  X11-cross-os.md  X12-os-divergence.md  X2-responsive.md  X3-i18n.md  X4-accessibility.md  X5-keyboard.md  X6-error-handling.md  X7-states.md  X8-performance.md  X9-interaction-states.md
openspec/changes/add-logging-engine/: design.md  proposal.md  tasks.md
openspec/changes/add-reado-mvp/: design.md  proposal.md  tasks.md
openspec/changes/agent-activity/: proposal.md  tasks.md
openspec/changes/agent-task-runner/: proposal.md  tasks.md
openspec/changes/ai-explain/: proposal.md  tasks.md
openspec/changes/ai-pre-review/: proposal.md  tasks.md
openspec/changes/anchored-qa/: proposal.md  tasks.md
openspec/changes/anywhere-hardening/: proposal.md  tasks.md
openspec/changes/async-review-loop/: proposal.md  tasks.md
openspec/changes/call-hierarchy/: proposal.md  tasks.md
openspec/changes/code-navigation/: proposal.md  tasks.md
openspec/changes/comment-resolution-loop/: proposal.md  tasks.md
openspec/changes/custom-title-bar/: proposal.md  tasks.md
openspec/changes/dockable-panels/: design.md  proposal.md  tasks.md
openspec/changes/extension-system/: proposal.md  tasks.md
openspec/changes/file-synopsis/: proposal.md  tasks.md
openspec/changes/git-review-grade/: proposal.md  tasks.md
openspec/changes/guided-pair-review/: proposal.md  tasks.md
openspec/changes/in-app-browser/: design.md  proposal.md  tasks.md
openspec/changes/inline-blame/: proposal.md  tasks.md
openspec/changes/language-server/: proposal.md  tasks.md
openspec/changes/lsp-resilience/: proposal.md  tasks.md
openspec/changes/mcp-server/: proposal.md  tasks.md
openspec/changes/multi-pane-terminal/: proposal.md  tasks.md
openspec/changes/native-menu-parity/: proposal.md  tasks.md
openspec/changes/notice-surface/: proposal.md  tasks.md
openspec/changes/problems-panel/: proposal.md  tasks.md
openspec/changes/pull-request-review/: proposal.md  tasks.md
openspec/changes/read-delta/: proposal.md  tasks.md
openspec/changes/reading-aids/: proposal.md  tasks.md
openspec/changes/reading-bookmarks/: proposal.md  tasks.md
openspec/changes/reading-coverage/: proposal.md  tasks.md
openspec/changes/reading-progress/: proposal.md  tasks.md
openspec/changes/reading-tour/: proposal.md  tasks.md
openspec/changes/reado-anywhere/: proposal.md  tasks.md
openspec/changes/repo-onboarding/: proposal.md  tasks.md
openspec/changes/semantic-index/: proposal.md  tasks.md
plugin/: README.md
plugin/reado/: AGENTS.md
scripts/: bundle-cli.sh  install-cli.sh  release.sh
scripts/testbook/: generate.mjs
scripts/uidriver/: README.md  drive.mjs  fuzz-batch.mjs  fuzz.mjs  vite-plugin.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.dev.plist  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: annotations.rs  anywhere.rs  anywhere_mobile.html  bookmarks.rs  cli.rs  defaults.rs  error.rs  fileopen.rs  forge.rs  format.rs  fs.rs  git.rs  index.rs  lib.rs  log.rs  lsp.rs  main.rs  menu.rs  preview.rs  proc.rs  progress.rs  pty.rs  reasoning.rs  search.rs  sessions.rs  symbols.rs  watcher.rs
src/components/: ActivityBar.tsx  Breadcrumb.tsx  CommentComposer.tsx  CommentThread.tsx  CommentsPanel.tsx  DiffView.tsx  DocsView.tsx  Editor.tsx  ErrorBoundary.tsx  FileTree.tsx  GitPanel.tsx  GitignorePrompt.tsx  ImageView.tsx  KnowledgeGraph.tsx  OrphansPanel.tsx  OutlinePanel.tsx  Palette.tsx  ProjectView.tsx  README.md  RecentProjects.tsx  SearchPanel.tsx  SendReviewDialog.tsx  Settings.tsx  SpecsPanel.tsx  StatusBar.tsx  Tabs.tsx  Terminal.tsx  TerminalPanel.tsx  TreeCommentDialog.tsx  Welcome.tsx  commentMeta.tsx  icons.tsx
src/i18n/: i18next.d.ts  index.ts
src/lib/: activity.ts  agents.ts  api.ts  appMenu.ts  automation.ts  blameGutter.ts  bookmarkGutter.ts  bookmarks.ts  bookmarks.uitest.ts  changedLines.ts  claudeTheme.ts  cn.ts  codemirror.ts  commentGutter.ts  comments.test.ts  comments.ts  comments.uitest.ts  coverage.ts  defaults.ts  diagnostics.ts  diagnostics.uitest.ts  docInfo.ts  extensions.ts  fileUndo.ts  focusBlock.ts  forge.ts  forge.uitest.ts  guidedReview.ts  guidedReview.uitest.ts  hierarchy.ts  hierarchy.uitest.ts  hooks.ts  knowledge.ts  languages.ts  layout.ts  logger.ts  lsp.ts  lspActions.ts  markdown.ts  mcp.ts  (+54 more)
src/styles/: app.css  tokens.css
src/test/: setup.ts
(+307 files in other folders)
