[package]
name = "reado"
version = "0.1.0"
description = "Reado — a calm, read-first code IDE."
authors = ["Reado contributors"]
license = "MIT"
repository = "https://github.com/UrionBlade/reado"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix avoids a name clash with the binary target; it is only
# strictly required on Windows (see rust-lang/cargo#8519) but we keep it on all
# platforms for consistency.
name = "reado_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
# Signed auto-updates (checks an update endpoint, verifies the signature).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# ISO-8601 timestamps for the structured log records (already in the tree).
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Shared annotation store (comment model + on-disk `.md` format), also used by
# the `reado` CLI so the two never drift.
reado-core = { path = "../crates/reado-core" }
# `ignore` is ripgrep's gitignore-aware directory walker; we reuse it so the
# file tree and search honour the exact same ignore rules as ripgrep.
ignore = "0.4"
# Regex engine for the symbol/definition index (go-to-definition).
regex = "1"
# Filesystem watcher (no polling) for re-anchoring comments on external edits.
notify = "6"
# Real pseudo-terminals for the integrated terminal (claude/codex run here).
portable-pty = "0.8"
# Surfaced, typed errors across the Tauri command boundary.
thiserror = "2"
# Rebuildable SQLite index of comments (a cache; the `.md` files stay the truth).
rusqlite = { version = "0.32", features = ["bundled"] }

# --- Reado Anywhere: opt-in LAN server (phone review over the local network) ---
# HTTP/WebSocket server (axum) served over TLS (axum-server) so the mobile PWA
# gets a secure context. tokio drives the async server (Tauri ships tokio too).
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
# Self-signed certificate generation + the rustls stack it's served with.
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
# Certificate fingerprint (SHA-256, hex) shown in the QR for verification.
sha2 = "0.10"
hex = "0.4"
# Single-use pairing tokens.
rand = "0.8"
# Discover the machine's LAN IP to put in the QR.
local-ip-address = "0.6"
# Stream/Sink helpers for the WebSocket terminal bridge.
futures-util = "0.3"
tauri-plugin-clipboard-manager = "2.3.2"

# Signal the PTY's process group on close so dev servers don't orphan (Unix only).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
