[package]
name = "reado-cli"
version = "0.1.0"
description = "The `reado` CLI: the stable contract an AI agent uses to read and resolve Reado tasks."
license = "MIT"
edition = "2021"

[[bin]]
name = "reado"
path = "src/main.rs"

[dependencies]
reado-core = { path = "../reado-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
